<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="94dp"
            android:layout_height="85dp" />

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/textView_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi" />

        <TextView
            android:id="@+id/textView_bmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmr" />
    </LinearLayout>

</RelativeLayout>